--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.1
 crispy-bootstrap5==0.6
 distlib==0.3.5
 dj-database-url==1.0.0
@@ -8,6 +10,7 @@ django-crispy-forms==1.14.0
 django-js-asset==2.0.0
 filelock==3.7.1
 gunicorn==20.1.0
+idna==3.3
 install==1.3.5
 Pillow==9.2.0
 platformdirs==2.5.2
@@ -15,7 +18,9 @@ psycopg2==2.9.3
 psycopg2-binary==2.8.6
 python-decouple==3.6
 pytz==2022.1
+requests==2.28.1
 sqlparse==0.4.2
 tzdata==2022.2
+urllib3==1.26.12
 virtualenv==20.16.2
 whitenoise==6.2.0
